state machine code

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This project is a working example of how to setup a Node.js project with Typescript.
 See the package.json and tsconfig.json
 Also N.B. to run anything, use npx tsx (see package.json script for dev)
+(i.e. ts-node foo.ts will give an error - unknown file extension)
 Also ensure that babel.config has extension .cjs instead of .js, otherwise jest doesn't work.
